added img to index.html file

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>new doc</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint blanditiis eveniet impedit nam numquam odit explicabo perspiciatis laudantium ullam fugit iusto, ea magnam consectetur voluptatibus excepturi, molestias a aliquid ipsa?</p>
     
+    <img src="/profile.jpg" alt="">
+    <p>new images</p>
 </body>
 </html>
