updated index.html with emergency fix

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>new doc</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint blanditiis eveniet impedit nam numquam odit explicabo perspiciatis laudantium ullam fugit iusto, ea magnam consectetur voluptatibus excepturi, molestias a aliquid ipsa?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea explicabo quis incidunt aliquid ratione eius autem, cumque hic blanditiis voluptatem quae? Exercitationem dicta neque repudiandae voluptate quo ea alias laudantium.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis possimus dolores inventore, explicabo nam praesentium voluptatem modi ab architecto natus assumenda soluta accusantium voluptates hic ratione dolor iusto quae minima.</p>
     
 </body>
 </html>
