--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     
     <img src="/profile.jpg" alt="">
     <p>new images</p>
+    <img src="/profile.jpg" alt="">
+    <p>image again</p>
 </body>
 </html>
